[Fix:bubbles] Clean section bubbles on mobile

--- a/web/assets/app/sass/animations/_movingBubble.sass
+++ b/web/assets/app/sass/animations/_movingBubble.sass
@@ -1,92 +1,92 @@
 @keyframes animateBubbleTop
   0%
     top: 50%
-    left: 40%
+    left: 35%
     opacity: 0
   100%
     top: 10%
-    left: 40%
+    left: 35%
     opacity: 1
 
 
 @keyframes animateBubbleCenter
   0%
     top: 50%
-    left: 40%
+    left: 30%
     opacity: 0
   100%
     top: 55%
-    left: 42%
+    left: 32%
     opacity: 1
 
 @keyframes animateBubbleCenterLeft
   0%
     top: 50%
-    left: 40%
+    left: 30%
     opacity: 0
   100%
     top: 40%
-    left: 28%
+    left: 18%
     opacity: 1
 
 @keyframes animateBubbleCenterRight
   0%
     top: 50%
-    left: 40%
+    left: 31%
     opacity: 0
   100%
     top: 35%
-    left: 44%
+    left: 34%
     opacity: 1
 
 @keyframes animateBubbleTopLeft
   0%
     top: 50%
-    left: 40%
+    left: 30%
     opacity: 0
   100%
     top: 6%
-    left: 30%
+    left: 20%
     opacity: 1
 
 @keyframes animateBubbleTopRight
   0%
     top: 50%
-    left: 40%
+    left: 30%
     opacity: 0
   100%
     top: 0
-    left: 70%
+    left: 60%
     opacity: 1
 
 @keyframes animateBubbleBottom
   0%
     top: 50%
-    left: 40%
+    left: 30%
     opacity: 0
   100%
     top: 80%
-    left: 26%
+    left: 16%
     opacity: 1
 
 @keyframes animateBubbleBottomLeft
   0%
     top: 50%
-    left: 40%
+    left: 30%
     opacity: 0
   100%
     top: 50%
-    left: 15%
+    left: 5%
     opacity: 1
 
 @keyframes animateBubbleBottomRight
   0%
     top: 50%
-    left: 40%
+    left: 30%
     opacity: 0
   100%
     top: 70%
-    left: 70%
+    left: 60%
     opacity: 1
 
 
