--- a/web/assets/app/sass/components/_bubble.sass
+++ b/web/assets/app/sass/components/_bubble.sass
@@ -1,8 +1,8 @@
 .containerBubbles
   position: relative
-  width: 50%
+
   height: 500px
-  margin: -100px auto 0 auto
+
   .bubble
     position: absolute
     top: 50%
